--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "license": "MIT",
   "dependencies": {
-    "lodash": "^4.17.10",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "react-scripts": "1.1.5"
+    "react-scripts": "1.1.5",
+    "react-tooltip": "^3.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
